# quantum-dsl

./: README.md  quantum-dsl.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.1/: package.cache  quantum-dsl-0.1.0.0-inplace.conf
examples/: BellState.hs  Teleportation.hs
src/QuantumDSL/: Core.hs  Interpreter.hs  Parser.hs  Syntax.hs  Types.hs
test/: Spec.hs
